--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url("vendors/bootstrap.css");
 
 html {
     font-size: 100%;
@@ -98,7 +97,7 @@ html, body {
         width: 100%;
         padding: 1.25rem;
         background: #fff;
-        box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+        box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.50);
     }
 
     .header__links-toggled {
@@ -266,7 +265,7 @@ html, body {
 
 .section__tab:not(.section__tab_active):hover {
     background: #fff;
-    box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+    box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.50);
 }
 
 .hero-dashboard {
@@ -442,7 +441,7 @@ html, body {
 
 .event__button:hover {
     background: #fff;
-    box-shadow: 0 2px 6px 0 rgba(197,186,186,0.50);
+    box-shadow: 0 2px 6px 0 rgba(197, 186, 186, 0.50);
 }
 
 .event__icon {
